force-app/main/default/objects/Team_Members__c/Team_Members__c.object-meta.xml
<CustomObject>
    <description>Team Member Object for capturing the Game Changer Team Members</description>
    <label>Team Member</label>
    <nameField>
        <displayFormat>TM-{00000}</displayFormat>
        <label>Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>