force-app/main/default/objects/Team_Members__c/fields/Game_Changer__c.field-meta.xml
<CustomField>
    <fullName>Game_Changer__c</fullName>
    <description>US-1214:RTB - OM - Game Changers</description>
    <label>Game Changer</label>
    <referenceTo>Game_Changer__c</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>