force-app/main/default/objects/Team_Members__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Description US-1214:RTB - OM - Game Changers</description>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>