force-app/main/default/objects/Team_Members__c/fields/Team_Member_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Business_Unit__c</fullName>
    <description>US-1217 RTB - OM - Game Changers Team members</description>
    <formula>TEXT(Team_Member__r.Business_Unit__c)</formula>
    <label>Team Member Business Unit</label>
    <type>Text</type>
</CustomField>