force-app/main/default/objects/Team_Members__c/fields/Team_Member_Country__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Country__c</fullName>
    <description>US-1217 RTB - OM - Game Changers Team members</description>
    <formula>Team_Member__r.User_Country__c</formula>
    <label>Team Member Country</label>
    <type>Text</type>
</CustomField>