force-app/main/default/objects/Team_Members__c/fields/Team_Member_Division__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Division__c</fullName>
    <description>US-1217 - RTB - OM - Game Changers Team members</description>
    <formula>TEXT( Team_Member__r.User_Division__c )</formula>
    <label>Team Member Division</label>
    <type>Text</type>
</CustomField>