force-app/main/default/objects/Team_Members__c/fields/Unique_IDs__c.field-meta.xml
<CustomField>
    <fullName>Unique_IDs__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>DEF-001814 Game Changer - Should not be allowed to duplicate Team Members on teh Team</description>
    <label>Unique IDs</label>
    <length>37</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>